# GGHL

./: .gitignore  README.md  demo..py  requirements.txt  test.py  train.sh  train_GGHL.py  train_GGHL_dist.py  train_GGHL_dist.sh
DOTA_devkit/: ImgSplit_multi_process.py  ResultMerge_multi_process.py  _polyiou.cp38-win_amd64.pyd  polyiou.cpp
Deploy/TensorRT/: README.md
Deploy/TensorRT/cpp/: CMakeLists.txt  main.cpp
Deploy/TensorRT/cpp/common/: CMakeLists.txt  OBBdet.h
config/: cfg_npmmr.py  config.py
dataR/: example.txt  ssdd.txt  train_HRSC2016.txt  train_HRSC2016_angle.txt
dataload/: augmentations.py  datasets_hbb.py
dataloadR/: augmentations.py  batch_sampler.py  datasets.py  datasets_FCOS_R.py  datasets_HBB.py  datasets_centernet.py  datasets_centernet_GGHL.py  datasets_new.py  datasets_obb.py  datasets_obb_pro.py  datasets_show.py
datasets_tools/: DOTA2Train.py  get_filename.py
datasets_tools/DOTA_devkit/: dota_evaluation_task2.py
eval/: coco_eval.py  evaluator.py  evaluatorDOTA.py  voc_eval.py
evalR/: eval.py  evaluator.py  evaluator1.py  evaluatorGGHL.py  evaluatorGGHL_new.py  evaluator_CenternetR.py  evaluator_demo.py  voc_eval.py
lib/DCNv2/: _ext.cp38-win_amd64.pyd  dcn_v2_amp.py  make.sh
lib/DCNv2_pytorch1.7_RTX3090/: README.md
log/: log-1.txt  log.txt  log_coco_test.txt  log_test.txt
log/event/: events.out.tfevents.1636282541.Shank  events.out.tfevents.1636282695.Shank  events.out.tfevents.1636282715.Shank  events.out.tfevents.1637329038.Shank  events.out.tfevents.1639657993.Shank  events.out.tfevents.1646382207.3090-double  events.out.tfevents.1656067419.Shank  events.out.tfevents.1656067807.Shank  events.out.tfevents.1656067827.Shank  events.out.tfevents.1656067897.Shank  (+109 more)
modelR/: CenterNet_R.py  GGHL.py  GGHL_LODet.py  GGHL_NPMMR.py  GGHL_hbb.py  GGHLv2.py  get_model_complexity.py  yolov3_modelR.py
utils/: cosine_lr_scheduler.py  gpu.py  log.py  num_of_works_set.py  utils_basic.py  utils_coco.py  visualize.py
(+61 files in other folders)
